--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,9 @@
     {{ site.subtitle }}
     {% endif %}
     </title>
+    
+    <base target="_blank">
+    
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="{{ site.description }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
