--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,7 @@
     
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="{{ site.description }}">
+    <meta name="author" content="Peter Schindler">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 
     <!-- Custom CSS -->
