--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="site-header">
 
   <div class="wrap title-wrap">
-    {{ site.title }}
+    <a class="site-title">{{ site.title }}</a>
   </div>
 
 </header>
